manifests/15-locust-swarm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-swarm
  namespace: default
spec:
  replicas: 15
  selector:
    matchLabels:
      app: locust-swarm
  template:
    metadata:
      labels:
        app: locust-swarm
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: load-test-pool
      containers:
      - name: locust
        image: locustio/locust
        # Each of the 15 pods will independently simulate 40 users, giving us 600 total concurrent connections
        # running indefinitely until we delete the deployment.
        command: ["sh", "-c", "locust -f /locust/locustfile.py --headless -u 40 -r 10 --host http://REPLACE_ME_DYNAMICALLY"]
        volumeMounts:
        - name: locust-script
          mountPath: /locust
      volumes:
      - name: locust-script
        configMap:
          name: locust-script
